--- a/styling.css
+++ b/styling.css
@@ -18,7 +18,17 @@ body{
 #penalty-canvas{
   border: 6px groove #FFF;
   background-color: rgb(22, 157, 22);
+  width: 900px;
+  height: 550px;
 }
+
+@media (max-width: 300px) {
+#penalty-canvas {
+width: 200px;
+height: 122px;
+}
+}
+
 
 .top-score{
   margin: 2em;
